--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -5,6 +5,8 @@
         <form
             action="/campgrounds/<%= campground._id %>?_method=PUT"
             method="POST"
+            class="validated-form"
+            novalidate
         >
             <div class="mb-3">
                 <label class="form-label" for="title">Title</label>
@@ -14,7 +16,9 @@
                     id="title"
                     name="campground[title]"
                     value="<%= campground.title %>"
+                    required
                 />
+                <div class="valid-feedback">Looks good!</div>
             </div>
             <div class="mb-3">
                 <label class="form-label" for="location">Location</label>
@@ -24,7 +28,9 @@
                     id="location"
                     name="campground[location]"
                     value="<%= campground.location %>"
+                    required
                 />
+                <div class="valid-feedback">Looks good!</div>
             </div>
             <div class="mb-3">
                 <label class="form-label" for="image">Image Url</label>
@@ -34,7 +40,9 @@
                     id="image"
                     name="campground[image]"
                     value="<%= campground.image %>"
+                    required
                 />
+                <div class="valid-feedback">Looks good!</div>
             </div>
             <div class="mb-3">
                 <label class="form-label" for="price">Price</label>
@@ -49,7 +57,9 @@
                         aria-describedby="price-label"
                         name="campground[price]"
                         value="<%= campground.price %>"
+                        required
                     />
+                    <div class="valid-feedback">Looks good!</div>
                 </div>
             </div>
             <div class="mb-3">
@@ -59,7 +69,9 @@
                     type="text"
                     id="description"
                     name="campground[description]"
+                    required
                 >
+                <div class="valid-feedback">Looks good!</div>
 <%= campground.description %></textarea
                 >
             </div>
