--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,8 +1,13 @@
-e<% layout('layouts/boilerplate') %>
+<% layout('layouts/boilerplate') %>
 <div class="row">
     <h1 class="text-center">New Campground</h1>
     <div class="col-6 offset-3">
-        <form action="/campgrounds" method="POST">
+        <form
+            action="/campgrounds"
+            method="POST"
+            class="validated-form"
+            novalidate
+        >
             <div class="mb-3">
                 <label class="form-label" for="title">Title</label>
                 <input
@@ -10,7 +15,9 @@ e<% layout('layouts/boilerplate') %>
                     type="text"
                     id="title"
                     name="campground[title]"
+                    required
                 />
+                <div class="valid-feedback">Looks good!</div>
             </div>
             <div class="mb-3">
                 <label class="form-label" for="location">Location</label>
@@ -19,7 +26,9 @@ e<% layout('layouts/boilerplate') %>
                     type="text"
                     id="location"
                     name="campground[location]"
+                    required
                 />
+                <div class="valid-feedback">Looks good!</div> 
             </div>
             <div class="mb-3">
                 <label class="form-label" for="image">Image Url</label>
@@ -28,7 +37,9 @@ e<% layout('layouts/boilerplate') %>
                     type="text"
                     id="image"
                     name="campground[image]"
+                    required
                 />
+                <div class="valid-feedback">Looks good!</div> 
             </div>
             <div class="mb-3">
                 <label class="form-label" for="price">Price</label>
@@ -42,7 +53,9 @@ e<% layout('layouts/boilerplate') %>
                         aria-label="price"
                         aria-describedby="price-label"
                         name="campground[price]"
+                        required
                     />
+                    <div class="valid-feedback">Looks good!</div> 
                 </div>
             </div>
             <div class="mb-3">
@@ -52,7 +65,9 @@ e<% layout('layouts/boilerplate') %>
                     type="text"
                     id="description"
                     name="campground[description]"
+                    required
                 ></textarea>
+                <div class="valid-feedback">Looks good!</div> 
             </div>
             <div class="mb-3">
                 <button class="btn btn-success">Add Campground</button>
@@ -61,3 +76,4 @@ e<% layout('layouts/boilerplate') %>
         <a href="/campgrounds">All Campgrounds</a>
     </div>
 </div>
+
