--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,11 +1,11 @@
 <% layout('layouts/boilerplate') %>
 <div class="row">
-    <div class="col-6 offset-3">
+    <div class="col-6">
         <div class="card mb-3">
             <img src="<%= campground.image %>" class="card-img-top" alt="..." />
             <div class="card-body">
                 <h5 class="card-title"><%= campground.title %></h5>
-                <p class="card-text" <%="campground.description" %></p>
+                <p class="card-text"><%= campground.description %></p>
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item text-muted">
@@ -32,24 +32,47 @@
                 <!-- <a href="/campgrounds">All Campgrounds</a> -->
             </footer>
         </div>
+    </div>
+    <div class="col-6">
         <h2>Leave a Review</h2>
-        <form action="/campgrounds/<%= campground._id %>/reviews" method="POST" class="mb-3 validated-form" novalidate>
+        <form
+            action="/campgrounds/<%= campground._id %>/reviews"
+            method="POST"
+            class="mb-3 validated-form"
+            novalidate
+        >
             <div class="mb-3">
                 <label class="form-label" for="rating">Rating</label>
-                <input class="form-range" type="range" name="review[rating]" id="rating" min="1" max="5">
+                <input
+                    class="form-range"
+                    type="range"
+                    name="review[rating]"
+                    id="rating"
+                    min="1"
+                    max="5"
+                />
             </div>
             <div class="mb-3">
                 <label class="form-label" for="body">Review</label>
-                <textarea class="form-control" name="review[body]" id="body" cols="30" rows="3" required></textarea>
-                <div class="valid-feedback">Looks good!</div> 
+                <textarea
+                    class="form-control"
+                    name="review[body]"
+                    id="body"
+                    cols="30"
+                    rows="3"
+                    required
+                ></textarea>
+                <div class="valid-feedback">Looks good!</div>
             </div>
             <button class="btn btn-success">Submit</button>
         </form>
         <% for(let review of campground.reviews) { %>
-            <div class="mb-3">
-                <p>Rating: <%= review.rating %></p>
-                <p><%= review.body %></p>
+        <div class="card mb-3">
+            <div class="card-body">
+                <h5 class="card-title">Rating: <%= review.rating %></h5>
+                <p class="card-text">Review: <%= review.body %></p>
             </div>
+        </div>
         <% } %>
     </div>
 </div>
