write register logic

--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -29,7 +29,7 @@
             class="form-control"
             type="password"
             id="password"
-            name="username"
+            name="password"
             required
         />
         <div class="valid-feedback">Looks good!</div> 
