--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -2,48 +2,18 @@
 <div class="row">
     <h1 class="text-center">New Campground</h1>
     <div class="col-6 offset-3">
-        <form
-            action="/campgrounds"
-            method="POST"
-            class="validated-form"
-            enctype="multipart/form-data"
-            novalidate
-        >
-        <!-- Because of enctype="multipart/form-data", we need to install multer package to hanlde multipart/form-data-->
+        <form action="/campgrounds" method="POST" class="validated-form" enctype="multipart/form-data" novalidate>
+            <!-- Because of enctype="multipart/form-data", we need to install multer package to hanlde multipart/form-data-->
             <div class="mb-3">
                 <label class="form-label" for="title">Title</label>
-                <input
-                    class="form-control"
-                    type="text"
-                    id="title"
-                    name="campground[title]"
-                    required
-                />
+                <input class="form-control" type="text" id="title" name="campground[title]" required />
                 <div class="valid-feedback">Looks good!</div>
             </div>
             <div class="mb-3">
                 <label class="form-label" for="location">Location</label>
-                <input
-                    class="form-control"
-                    type="text"
-                    id="location"
-                    name="campground[location]"
-                    required
-                />
-                <div class="valid-feedback">Looks good!</div> 
+                <input class="form-control" type="text" id="location" name="campground[location]" required />
+                <div class="valid-feedback">Looks good!</div>
             </div>
-            <!-- <div class="mb-3">
-                <label class="form-label" for="image">Image Url</label>
-                <input
-                    class="form-control"
-                    type="text"
-                    id="image"
-                    name="campground[image]"
-                    required
-                />
-                <div class="valid-feedback">Looks good!</div> 
-            </div> -->
-            <input type="file" name="image" id="" multiple>
             <div class="mb-3">
                 <label class="form-label" for="price">Price</label>
                 <div class="input-group mb-3">
@@ -58,19 +28,17 @@
                         name="campground[price]"
                         required
                     />
-                    <div class="valid-feedback">Looks good!</div> 
+                    <div class="valid-feedback">Looks good!</div>
                 </div>
             </div>
             <div class="mb-3">
                 <label class="form-label" for="description">Description</label>
-                <textarea
-                    class="form-control"
-                    type="text"
-                    id="description"
-                    name="campground[description]"
-                    required
-                ></textarea>
-                <div class="valid-feedback">Looks good!</div> 
+                <textarea class="form-control" type="text" id="description" name="campground[description]" required></textarea>
+                <div class="valid-feedback">Looks good!</div>
+            </div>
+            <div class="mb-3">
+                <label for="image" class="form-label">Upload Images</label>
+                <input class="form-control" type="file" id="image" name="image" multiple />
             </div>
             <div class="mb-3">
                 <button class="btn btn-success">Add Campground</button>
@@ -79,4 +47,3 @@
         <a href="/campgrounds">All Campgrounds</a>
     </div>
 </div>
-
