--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,6 +1,6 @@
 <% layout('layouts/boilerplate') %>
 <!-- Injecting our content into this layout -->
-<div id="map" style="width: 100%; height: 500px;"></div>
+<div id="cluster-map"></div>
 <h1>All Campgrounds</h1>
 <div>
     <a href="/campgrounds/new">Add Campground</a>
